--- a/sass/style.css
+++ b/sass/style.css
@@ -4,6 +4,10 @@
   font-family: 'Roboto', 'sans-serif';
 }
 
+.body_loading_spinner {
+  display: none;
+}
+
 /* style de la partie header */
 .header {
   -webkit-box-shadow: 0px 2px 5px #bbbbbb;
@@ -213,6 +217,10 @@
   margin: 0px;
 }
 
+.restaurants_nom::first-letter {
+  text-transform: uppercase;
+}
+
 .coeurs {
   font-size: 20pt;
   position: relative;
@@ -318,6 +326,7 @@
   margin: 10px 5px 10px 5px;
   background: white;
   width: 290px;
+  max-height: 60px;
   border-radius: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -327,6 +336,31 @@
           justify-content: space-between;
   -webkit-box-shadow: 5px 5px 5px #c8c8c8;
           box-shadow: 5px 5px 5px #c8c8c8;
+  position: relative;
+}
+
+.list_plat_et_tarif:hover .list_nom_du_plat {
+  width: 190px;
+}
+
+.list_plat_et_tarif:hover .list_description {
+  width: 190px;
+}
+
+.list_plat_et_tarif:hover .list_prix {
+  -webkit-transform: translateX(-50px);
+          transform: translateX(-50px);
+}
+
+.list_plat_et_tarif:hover .check {
+  -webkit-transform: rotate(2turn);
+          transform: rotate(2turn);
+}
+
+.list_plat_et_tarif:hover .list_check {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+  z-index: 0;
 }
 
 .list_plats {
@@ -335,22 +369,247 @@
 
 .list_nom_du_plat {
   font-weight: 900;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
 }
 
 .list_description {
   font-size: 10pt;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
+}
+
+.list_prix_et_check {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.list_check {
+  padding-top: 10px;
+  -webkit-transform-origin: right;
+          transform-origin: right;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: -webkit-transform 600ms;
+  transition: -webkit-transform 600ms;
+  transition: transform 600ms;
+  transition: transform 600ms, -webkit-transform 600ms;
+  background-color: #99E2D0;
+  height: 60px;
+  padding: 20px 15px 20px 15px;
+  position: absolute;
+  top: 0px;
+  right: -1px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
 .list_prix {
   padding-top: 20px;
+  -webkit-transform: translateX(0px);
+          transform: translateX(0px);
+  -webkit-transition: -webkit-transform 600ms;
+  transition: -webkit-transform 600ms;
+  transition: transform 600ms;
+  transition: transform 600ms, -webkit-transform 600ms;
 }
 
-.list_check {
-  display: none;
+.check {
+  -webkit-transform: rotate(0turn);
+          transform: rotate(0turn);
+  -webkit-transition: -webkit-transform 600ms;
+  transition: -webkit-transform 600ms;
+  transition: transform 600ms;
+  transition: transform 600ms, -webkit-transform 600ms;
+  font-size: 16pt;
+  color: white;
 }
 
 .commander {
   padding: 40px 10px 50px 10px;
   background-color: #f6f6f6;
+}
+
+/*** animations de chargement ***/
+.content {
+  -webkit-transform-origin: bottom;
+          transform-origin: bottom;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-animation: chargement;
+          animation: chargement;
+  -webkit-animation-delay: 2500ms;
+          animation-delay: 2500ms;
+  -webkit-animation-duration: 500ms;
+          animation-duration: 500ms;
+  background-color: white;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes chargement {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes chargement {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@-webkit-keyframes disparition {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    height: 0;
+  }
+}
+
+@keyframes disparition {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    height: 0;
+  }
+}
+
+.body {
+  height: 100vh;
+  position: relative;
+  width: 100%;
+}
+
+.section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 46px;
+  height: 100%;
+  -webkit-transform-origin: bottom;
+          transform-origin: bottom;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-animation: disparition;
+          animation: disparition;
+  -webkit-animation-delay: 2500ms;
+          animation-delay: 2500ms;
+  -webkit-animation-duration: 500ms;
+          animation-duration: 500ms;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+.text {
+  color: #99E2D0;
+  -webkit-animation: shadow 1000ms ease-in-out infinite;
+          animation: shadow 1000ms ease-in-out infinite;
+  margin: 20px;
+  font-family: 'Shrikhand', 'Cursive';
+}
+
+@-webkit-keyframes shadow {
+  0% {
+    text-shadow: 0px 0px 0px;
+  }
+  100% {
+    text-shadow: 5px 5px 5px #C8C8C8;
+  }
+}
+
+@keyframes shadow {
+  0% {
+    text-shadow: 0px 0px 0px;
+  }
+  100% {
+    text-shadow: 5px 5px 5px #C8C8C8;
+  }
+}
+
+.loader {
+  height: 40px;
+  width: 10px;
+  vertical-align: middle;
+  border-left: 10px solid #99E2D0;
+  -webkit-animation: spinner 1000ms ease-in-out infinite;
+          animation: spinner 1000ms ease-in-out infinite;
+  margin: 10px;
+}
+
+.load1 {
+  -webkit-animation-delay: 400ms;
+          animation-delay: 400ms;
+}
+
+.load2 {
+  -webkit-animation-delay: 800ms;
+          animation-delay: 800ms;
+}
+
+.load3 {
+  -webkit-animation-delay: 1200ms;
+          animation-delay: 1200ms;
+}
+
+@-webkit-keyframes spinner {
+  0% {
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+  }
+  50% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+  }
+  100% {
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+  }
+}
+
+@keyframes spinner {
+  0% {
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+  }
+  50% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+  }
+  100% {
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+  }
 }
 /*# sourceMappingURL=style.css.map */
