--- a/sass/style.css
+++ b/sass/style.css
@@ -80,7 +80,7 @@
 }
 
 .fonctionnement_list_etapes {
-  margin: 25px -5px;
+  margin: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -337,6 +337,13 @@
   -webkit-box-shadow: 5px 5px 5px #c8c8c8;
           box-shadow: 5px 5px 5px #c8c8c8;
   position: relative;
+  -webkit-transform-origin: top;
+          transform-origin: top;
+  opacity: 0;
+  -webkit-animation: animation 1000ms ease-in-out;
+          animation: animation 1000ms ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .list_plat_et_tarif:hover .list_nom_du_plat {
@@ -417,6 +424,26 @@
   transition: -webkit-transform 600ms;
   transition: transform 600ms;
   transition: transform 600ms, -webkit-transform 600ms;
+}
+
+.first {
+  -webkit-animation-delay: 200ms;
+          animation-delay: 200ms;
+}
+
+.second {
+  -webkit-animation-delay: 400ms;
+          animation-delay: 400ms;
+}
+
+.third {
+  -webkit-animation-delay: 600ms;
+          animation-delay: 600ms;
+}
+
+.fourth {
+  -webkit-animation-delay: 800ms;
+          animation-delay: 800ms;
 }
 
 .check {
@@ -610,6 +637,42 @@
   100% {
     -webkit-transform: scaleY(0);
             transform: scaleY(0);
+  }
+}
+
+@-webkit-keyframes animation {
+  0% {
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+    opacity: 0;
+  }
+  80% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+    opacity: 1;
+  }
+}
+
+@keyframes animation {
+  0% {
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+    opacity: 0;
+  }
+  80% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+    opacity: 1;
   }
 }
 /*# sourceMappingURL=style.css.map */
