--- a/sass/style.css
+++ b/sass/style.css
@@ -474,8 +474,8 @@
           transform: scale(0);
   -webkit-animation: chargement linear;
           animation: chargement linear;
-  -webkit-animation-delay: 2500ms;
-          animation-delay: 2500ms;
+  -webkit-animation-delay: 2900ms;
+          animation-delay: 2900ms;
   -webkit-animation-duration: 100ms;
           animation-duration: 100ms;
   background-color: white;
@@ -555,137 +555,97 @@
           transform: scale(1);
   -webkit-animation: disparition linear;
           animation: disparition linear;
-  -webkit-animation-delay: 2400ms;
-          animation-delay: 2400ms;
-  -webkit-animation-duration: 500ms;
-          animation-duration: 500ms;
+  -webkit-animation-delay: 2700ms;
+          animation-delay: 2700ms;
+  -webkit-animation-duration: 100ms;
+          animation-duration: 100ms;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
 }
 
 .letter {
   font-family: 'Shrikhand', 'cursive';
-  -webkit-animation: spinner 1500ms linear infinite, shadow 1500ms linear infinite;
-          animation: spinner 1500ms linear infinite, shadow 1500ms linear infinite;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-  letter-spacing: 5px;
+  -webkit-animation: spinner 1000ms linear infinite;
+          animation: spinner 1000ms linear infinite;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+  letter-spacing: 25px;
   font-size: 50pt;
   -webkit-transform: scale(0);
           transform: scale(0);
+  background: -webkit-linear-gradient(top, #9356DC, #FF79DA);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .let1 {
-  -webkit-animation-delay: 100ms, 0ms;
-          animation-delay: 100ms, 0ms;
-  color: #8641d8;
+  -webkit-animation-delay: 50ms, 0ms;
+          animation-delay: 50ms, 0ms;
 }
 
 .let2 {
-  -webkit-animation-delay: 200ms, 0ms;
-          animation-delay: 200ms, 0ms;
-  color: #9356DC;
+  -webkit-animation-delay: 100ms, 0ms;
+          animation-delay: 100ms, 0ms;
 }
 
 .let3 {
-  -webkit-animation-delay: 300ms, 0ms;
-          animation-delay: 300ms, 0ms;
-  color: #a16be0;
+  -webkit-animation-delay: 150ms, 0ms;
+          animation-delay: 150ms, 0ms;
 }
 
 .let4 {
-  -webkit-animation-delay: 400ms, 0ms;
-          animation-delay: 400ms, 0ms;
-  color: #ae80e5;
+  -webkit-animation-delay: 200ms, 0ms;
+          animation-delay: 200ms, 0ms;
 }
 
 .let5 {
-  -webkit-animation-delay: 500ms, 0ms;
-          animation-delay: 500ms, 0ms;
-  color: #FF79DA;
+  -webkit-animation-delay: 250ms, 0ms;
+          animation-delay: 250ms, 0ms;
 }
 
 .let6 {
-  -webkit-animation-delay: 600ms, 0ms;
-          animation-delay: 600ms, 0ms;
-  color: #ff60d3;
+  -webkit-animation-delay: 300ms, 0ms;
+          animation-delay: 300ms, 0ms;
 }
 
 .let7 {
-  -webkit-animation-delay: 700ms, 0ms;
-          animation-delay: 700ms, 0ms;
-  color: #ff46cc;
+  -webkit-animation-delay: 350ms, 0ms;
+          animation-delay: 350ms, 0ms;
 }
 
 .let8 {
-  -webkit-animation-delay: 800ms,0ms;
-          animation-delay: 800ms,0ms;
-  color: #ff2dc5;
+  -webkit-animation-delay: 400ms,0ms;
+          animation-delay: 400ms,0ms;
 }
 
 @-webkit-keyframes spinner {
   0% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-    opacity: 0;
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
   }
   80% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    opacity: 1;
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
   }
   100% {
     -webkit-transform: scale(1);
             transform: scale(1);
-    opacity: .9;
   }
 }
 
 @keyframes spinner {
   0% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-    opacity: 0;
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
   }
   80% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    opacity: 1;
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
   }
   100% {
     -webkit-transform: scale(1);
             transform: scale(1);
-    opacity: .9;
-  }
-}
-
-@-webkit-keyframes shadow {
-  0% {
-    text-shadow: 5px 5px 5px #FF79DA;
-  }
-  40% {
-    text-shadow: 5px 5px 5px #9356DC;
-  }
-  60% {
-    text-shadow: 5px 5px 5px #FF79DA;
-  }
-  100% {
-    text-shadow: 5px 5px 5px #9356DC;
-  }
-}
-
-@keyframes shadow {
-  0% {
-    text-shadow: 5px 5px 5px #FF79DA;
-  }
-  40% {
-    text-shadow: 5px 5px 5px #9356DC;
-  }
-  60% {
-    text-shadow: 5px 5px 5px #FF79DA;
-  }
-  100% {
-    text-shadow: 5px 5px 5px #9356DC;
   }
 }
 
