--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,7 +45,7 @@ $quaternaire: #c8c8c8;
         margin : 0px 0px 2px 0px;
         padding: $valeur1;
         font-size: 16pt;
-        box-shadow: 0px 5px 10px darken($quaternaire,5)
+        box-shadow: 0px 5px 10px darken($quaternaire,5);
     }
     &_icone {
         position: absolute;
@@ -111,6 +111,7 @@ $quaternaire: #c8c8c8;
         border-radius: 20px;
         position:relative;
         box-shadow:  5px 5px 5px $quaternaire;
+        cursor: pointer;
     }
     &_nombre {
         position: absolute; 
@@ -280,6 +281,7 @@ $quaternaire: #c8c8c8;
         opacity:0;
         animation: animation 1000ms ease-in-out;
         animation-fill-mode: forwards;
+        cursor: pointer;
         &:hover .list_nom_du_plat {
             width:190px;
         }
