--- a/sass/style.css
+++ b/sass/style.css
@@ -209,6 +209,23 @@
   opacity: 1;
 }
 
+.restaurants_description :hover .coeurs_vi {
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  z-index: 0;
+}
+
+.restaurants_description :hover .coeurs_pl {
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  z-index: 1;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  opacity: 1;
+}
+
 .restaurants_et_lieu {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -244,6 +261,22 @@
   position: absolute;
   top: 10px;
   right: 10px;
+  z-index: 1;
+}
+
+.coeurs_pl {
+  opacity: 0;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position: absolute;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: all 500ms;
+  transition: all 500ms;
+}
+
+.coeurs_vi {
+  position: absolute;
   z-index: 1;
 }
 
@@ -303,6 +336,50 @@
 
 .accueil_nom::first-letter {
   text-transform: uppercase;
+}
+
+.accueil_nom_et_coeur :hover {
+  cursor: pointer;
+}
+
+.accueil_nom_et_coeur :hover .coeurs_vide {
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  z-index: 0;
+}
+
+.accueil_nom_et_coeur :hover .coeurs_plein {
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  z-index: 1;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  opacity: 1;
+}
+
+.accueil_nom_et_coeur :hover .coeurs_vi {
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  z-index: 0;
+}
+
+.accueil_nom_et_coeur :hover .coeurs_pl {
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  z-index: 1;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  opacity: 1;
+}
+
+.accueil .coeurs {
+  position: absolute;
+  bottom: 35px;
+  right: 50px;
 }
 
 .list {
